server/k8s/production/deployments.yaml
# api-gateway

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: wimble
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: fauzu/wimble-api_gateway:latest
        imagePullPolicy: Always
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: wimble
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: api-gateway
  type: ClusterIP
---

# user-service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: wimble
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: fauzu/wimble-user_service:latest
        imagePullPolicy: Always
        imagePullPolicy: Always
        ports:
          - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: wimble
spec:
  ports:
  - port: 8001
    targetPort: 8001
  selector:
    app: user-service
  type: ClusterIP
---

# article-service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: article-service
  namespace: wimble 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: article-service
  template:
    metadata:
      labels:
        app: article-service
    spec:
      containers:
      - name: article-service
        image: fauzu/wimble-article_service:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: article-service
  namespace: wimble
spec:
  ports:
  - port: 8002
    targetPort: 8002
  selector:
    app: article-service
  type: ClusterIP
---

# community-service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-service
  namespace: wimble
spec:
  replicas: 1
  selector:
    matchLabels:
      app: community-service
  template:
    metadata:
      labels:
        app: community-service
    spec:
      containers:
      - name: community-service
        image: fauzu/wimble-community_service:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: community-service
  namespace: wimble
spec:
  ports:
  - port: 8003
    targetPort: 8003
  selector:
    app: community-service
  type: ClusterIP
---

# team-service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: team-service
  namespace: wimble
spec:
  replicas: 1
  selector:
    matchLabels:
      app: team-service
  template:
    metadata:
      labels:
        app: team-service
    spec:
      containers:
      - name: team-service
        image: fauzu/wimble-team_service:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: team-service
  namespace: wimble
spec:
  ports:
  - port: 8004
    targetPort: 8004
  selector:
    app: team-service
  type: ClusterIP
---

# communication-service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: communication-service
  namespace: wimble
spec:
  replicas: 1
  selector:
    matchLabels:
      app: communication-service
  template:
    metadata:
      labels:
        app: communication-service
    spec:
      containers:
      - name: communication-service
        image: fauzu/wimble-communication_service:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8005
---
apiVersion: v1
kind: Service
metadata:
  name: communication-service
  namespace: wimble
spec:
  ports:
  - port: 8005
    targetPort: 8005
  selector:
    app: communication-service
  type: ClusterIP
---

# payment-service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: wimble
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: fauzu/wimble-payment_service:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8006
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: wimble
spec:
  ports:
  - port: 8006
    targetPort: 8006
  selector:
    app: payment-service
  type: ClusterIP
---

# celery-worker

apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  namespace: wimble
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
      - name: celery-worker
        image: fauzu/wimble-communication_service:latest
        imagePullPolicy: Always
        command: ["celery", "-A", "communication_service", "worker", "-l", "info"]
---
apiVersion: v1
kind: Service
metadata:
  name: celery-worker
  namespace: wimble
spec:
  ports:
  - port: 5555
    targetPort: 5555
  selector:
    app: celery-worker
  type: ClusterIP
---

# grafana

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: wimble
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: wimble
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: grafana
  type: ClusterIP
