server/k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wimble-ingress
  namespace: wimble
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/websocket-services: "communication-service"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - backend.wimble.fauzudheen.online
    secretName: wimble-tls
  rules:
    - host: backend.wimble.fauzudheen.online
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: api-gateway
                port:
                  number: 8000
          - pathType: Prefix
            path: /grafana
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - pathType: Prefix
            path: /ws
            backend:
              service:
                name: communication-service
                port:
                  number: 8005
